k8s/local/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  ingressClassName: nginx
  rules:
  # - host: samplebackend.localdev.me
  #   http:
  #     paths:
  #     - path: /api/ #(.*)
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: samplebackend
  #           port:
  #             number: 3001
  - host: samplefrontend.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samplefrontend
            port:
              number: 3000
      - path: /api/ #(.*)
        pathType: Prefix
        backend:
          service:
            name: samplebackend
            port:
              number: 3001
